--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,12 +17,34 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+            minifyEnabled false
+            shrinkResources false
+        }
         release {
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions 'testing'
+    productFlavors {
+        staging {
+            dimension 'testing'
+            applicationIdSuffix '.staging'
+            versionNameSuffix '-staging'
+            resValue "string", "app_name", "Staging"
+            buildConfigField "String", 'URL_BASE', '"https://staging.ablespace.io"'
+        }
+        production {
+            dimension 'testing'
+            resValue "string", "app_name", "Ablespace"
+            buildConfigField "String", 'URL_BASE', '"https://app.ablespace.io"'
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
